# eddie

./: .gitignore  .project  Eddie.cabal  README.md
src/Eddie/: Examples.hs  Graph.hs  Kalman.hs  Localization.hs  Search.hs
