name:           Eddie
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         ekebonke

library
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   Eddie.Search

executable Eddie
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   Eddie.Search

